--- a/index.html
+++ b/index.html
@@ -2,13 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Лабораторна робота №7</title>
+    <style>
+        body {
+            font-family: 'Times New Roman', Times, serif;
+            background-color: #ffd3f5;
+            margin: 0;
+            padding: 20px;
+        }
+
+        h1, h2 {
+            color: #07245f;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            margin-bottom: 20px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: center;
+        }
+
+        li {
+            margin: 10px 0;
+        }
+
+        a {
+            text-decoration: none;
+            color: #391db4;
+            font-weight: bold;
+        }
+
+        a:hover {
+            color: #13022b;
+        }
+    </style>
 </head>
 <body>
 <h1>Лабораторна робота №7</h1>
+<h2>Тишкевич Владислави ІК-12</h2>
 <ul>
-    <li><a href="task1.html">Завдання №1</a></li>
-    <li><a href="task2.html">Завдання №2</a></li>
+    <br></br>
+    <li><a href="task1.html">Завдання №1 (Галерея)</a></li>
+    <li><a href="task2.html">Завдання №2 (Email форма)</a></li>
 </ul>
 </body>
 </html>
