--- a/task1.html
+++ b/task1.html
@@ -10,16 +10,9 @@
     <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-<ul class="gallery">
-
-</ul>
-<figure id="original" hidden>
-
-</figure>
-
-<script src="
-https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-"></script>
-<script src="js/task1.js"></script>
+    <ul class="gallery"></ul>
+    <figure id="original" hidden></figure>
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+    <script src="js/task1.js"></script>
 </body>
 </html>
